flux/manifests/03-services/tailscale/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tailscale-system
  labels:
    name: tailscale-system
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
